--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "Old Twitter",
-  "description": "Long live the bird",
-  "version": "1.0",
+  "name": "Dogecoin Twitter/X Logo",
+  "description": "Long live the dogecoin",
+  "version": "69.420",
   "manifest_version": 3,
   "icons": {
-    "48": "/assets/twitter.png",
-    "128": "/assets/twitter.png"
+    "48": "/assets/dogecoin.png",
+    "128": "/assets/dogecoin.png"
   },
   "web_accessible_resources": [
     {
-      "resources": ["/assets/twitter.png", "/assets/twitter-favicon.png"],
+      "resources": ["/assets/dogecoin.png", "/assets/dogecoin-favicon.png"],
       "matches": ["https://twitter.com/*"]
     }
   ],
